test/scc/expr/semantic-errors/170.a
170.t:3:35: error: undeclared identifier 'aa'